--- a/surface-ar-sample/src/main/res/layout/fragment_surface_ar_overlay.xml
+++ b/surface-ar-sample/src/main/res/layout/fragment_surface_ar_overlay.xml
@@ -26,29 +26,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <com.google.android.material.button.MaterialButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/screenshotButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:src="@drawable/ic_cellphone_screenshot"
             android:layout_weight="1"
-            android:text="@string/button_label_screenshot"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:layout_margin="@dimen/dimen_button_20"
+            android:backgroundTint="@color/primary"
+            app:tint="@color/white"
+            app:fabSize="mini"/>
 
-        <com.google.android.material.button.MaterialButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/videoButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:src="@drawable/ic_radiobox_marked"
             android:layout_weight="1"
-            android:text="@string/button_label_record_video"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:layout_margin="@dimen/dimen_button_20"
+            android:backgroundTint="@color/primary"
+            app:tint="#FF6868"
+            app:fabSize="mini"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/placeMoveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/dimen_button_20"
             android:layout_weight="1"
             android:text="@string/button_label_place" />
 
