--- a/target-ar-sample/src/main/res/layout/fragment_target_ar_overlay.xml
+++ b/target-ar-sample/src/main/res/layout/fragment_target_ar_overlay.xml
@@ -26,19 +26,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone">
 
-        <com.google.android.material.button.MaterialButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/screenshotButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_label_screenshot"
-            android:layout_margin="@dimen/dimen_button_20"/>
+            android:src="@drawable/ic_cellphone_screenshot"
+            android:layout_margin="@dimen/dimen_button_20"
+            android:backgroundTint="@color/primary"
+            app:tint="@color/white"
+            app:fabSize="mini"/>
 
-        <com.google.android.material.button.MaterialButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/videoButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_label_record_video"
-            android:layout_margin="@dimen/dimen_button_20"/>
+            android:src="@drawable/ic_radiobox_marked"
+            android:layout_margin="@dimen/dimen_button_20"
+            android:backgroundTint="@color/primary"
+            app:tint="#FF6868"
+            app:fabSize="mini"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
