--- a/core-sample/src/main/res/layout/main_fragment.xml
+++ b/core-sample/src/main/res/layout/main_fragment.xml
@@ -18,11 +18,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="150dp"
+            android:layout_height="35dp"
             android:layout_margin="16dp"
             android:contentDescription="@string/app_logo"
-            android:src="@drawable/splash_icon">
+            android:background="@color/white"
+            android:src="@drawable/logo">
         </ImageView>
 
         <TextView
