--- a/surface-ar-sample/src/main/res/layout/fragment_main.xml
+++ b/surface-ar-sample/src/main/res/layout/fragment_main.xml
@@ -17,11 +17,12 @@
     app:layout_constraintEnd_toEndOf="parent">
 
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="150dp"
+        android:layout_height="35dp"
         android:layout_margin="16dp"
         android:contentDescription="@string/app_logo"
-        android:src="@drawable/splash_icon">
+        android:background="@color/white"
+        android:src="@drawable/logo">
     </ImageView>
 
     <TextView
